flowlog-build/tests/errors/parser/tuple_subtype_decl.dl
.type Pair <: (a: symbol, b: symbol)
.decl R(p: Pair)
.output R
